--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -42,29 +42,8 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODU-rr-bzw">
-                                <rect key="frame" x="8" y="592" width="55" height="55"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="65m-dp-aaf"/>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="55" id="IRx-YO-ubD"/>
-                                    <constraint firstAttribute="width" secondItem="ODU-rr-bzw" secondAttribute="height" multiplier="1:1" id="O6x-CK-oIU"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="78" id="cdF-VO-zqf"/>
-                                </constraints>
-                                <state key="normal" image="icon.png">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="65m-dp-aaf"/>
-                                        <exclude reference="cdF-VO-zqf"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <segue destination="wP7-Bq-9ev" kind="push" id="hmU-XA-0LX"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tUX-si-HHw">
-                                <rect key="frame" x="78" y="592" width="55" height="55"/>
+                                <rect key="frame" x="16" y="592" width="55" height="55"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tUX-si-HHw" secondAttribute="height" multiplier="1:1" id="0J7-pV-FhN"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="55" id="Rcu-K9-jxO"/>
@@ -79,39 +58,26 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ODU-rr-bzw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="10" id="5qb-OA-4rl"/>
                             <constraint firstAttribute="centerY" secondItem="bZp-AG-YS0" secondAttribute="centerY" constant="-263" id="6Br-hg-DrG"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="16" id="Ba2-bn-ERt"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="5" id="F26-9X-agR"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="tUX-si-HHw" secondAttribute="bottom" constant="30" id="Hs9-bP-EH8"/>
-                            <constraint firstItem="ODU-rr-bzw" firstAttribute="leading" relation="lessThanOrEqual" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" multiplier="0.5" id="ImB-jn-URS"/>
-                            <constraint firstAttribute="centerY" secondItem="ODU-rr-bzw" secondAttribute="centerY" constant="-210" id="N9z-bb-X1r"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" multiplier="0.25" constant="541" id="NaF-eN-Bwy"/>
-                            <constraint firstItem="ODU-rr-bzw" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="509" id="RHb-bu-sXI"/>
-                            <constraint firstAttribute="centerX" secondItem="ODU-rr-bzw" secondAttribute="centerX" constant="114" id="T9V-tm-I2z"/>
-                            <constraint firstItem="tUX-si-HHw" firstAttribute="leading" relation="lessThanOrEqual" secondItem="ODU-rr-bzw" secondAttribute="trailing" constant="15" id="UGp-VM-yIE"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" relation="lessThanOrEqual" secondItem="ODU-rr-bzw" secondAttribute="bottom" multiplier="1:1" constant="20" id="Vyc-rg-DIE"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="WIG-Ls-XF3"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bZp-AG-YS0" secondAttribute="bottom" constant="5" id="XQD-aQ-W9H"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ODU-rr-bzw" secondAttribute="trailing" constant="220" id="Yzy-Dk-Wif"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="ODU-rr-bzw" secondAttribute="bottom" constant="-30" id="bgK-2G-fJc"/>
-                            <constraint firstAttribute="trailingMargin" relation="lessThanOrEqual" secondItem="ODU-rr-bzw" secondAttribute="trailing" constant="281" id="d34-gZ-xKM"/>
-                            <constraint firstItem="ODU-rr-bzw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="fHp-fQ-q4d"/>
+                            <constraint firstItem="tUX-si-HHw" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ec0-ed-1z1"/>
                             <constraint firstAttribute="trailing" secondItem="bZp-AG-YS0" secondAttribute="trailing" constant="5" id="fcj-mY-BZp"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bZp-AG-YS0" secondAttribute="trailing" id="fef-pE-aya"/>
                             <constraint firstAttribute="centerY" secondItem="tUX-si-HHw" secondAttribute="centerY" id="gds-Jb-AZx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bZp-AG-YS0" secondAttribute="trailing" constant="-16" id="hgU-fM-9HY"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="top" relation="lessThanOrEqual" secondItem="tUX-si-HHw" secondAttribute="bottom" constant="-75" id="hk4-Wa-xhF"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ODU-rr-bzw" secondAttribute="trailing" constant="200" id="kHc-0v-LeL"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="koS-12-Qfn"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="nrp-FB-9iZ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bZp-AG-YS0" secondAttribute="trailing" constant="16" id="pe9-6q-cXK"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bZp-AG-YS0" secondAttribute="bottom" id="qlF-fN-0xQ"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bZp-AG-YS0" secondAttribute="bottom" constant="20" id="req-R4-Dkd"/>
-                            <constraint firstItem="ODU-rr-bzw" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="509" id="tif-9B-7en"/>
                             <constraint firstItem="bZp-AG-YS0" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="475" id="uoB-Uq-BS6"/>
                             <constraint firstAttribute="centerY" secondItem="tUX-si-HHw" secondAttribute="centerY" id="wdF-SB-X23"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ODU-rr-bzw" secondAttribute="bottom" constant="20" id="zSB-tl-cDg"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -126,21 +92,10 @@
                                 <exclude reference="nrp-FB-9iZ"/>
                                 <exclude reference="pe9-6q-cXK"/>
                                 <exclude reference="uoB-Uq-BS6"/>
-                                <exclude reference="5qb-OA-4rl"/>
-                                <exclude reference="N9z-bb-X1r"/>
-                                <exclude reference="RHb-bu-sXI"/>
-                                <exclude reference="T9V-tm-I2z"/>
-                                <exclude reference="Yzy-Dk-Wif"/>
-                                <exclude reference="bgK-2G-fJc"/>
-                                <exclude reference="d34-gZ-xKM"/>
-                                <exclude reference="fHp-fQ-q4d"/>
-                                <exclude reference="kHc-0v-LeL"/>
-                                <exclude reference="tif-9B-7en"/>
                                 <exclude reference="gds-Jb-AZx"/>
                                 <exclude reference="wdF-SB-X23"/>
                                 <exclude reference="XQD-aQ-W9H"/>
                                 <exclude reference="req-R4-Dkd"/>
-                                <exclude reference="zSB-tl-cDg"/>
                             </mask>
                         </variation>
                     </view>
@@ -150,30 +105,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1129.5" y="239.5"/>
-        </scene>
-        <!--table1-->
-        <scene sceneID="NvI-OS-7su">
-            <objects>
-                <tableViewController id="wP7-Bq-9ev" customClass="SerchTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="zhC-ov-1lT">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="dataSource" destination="wP7-Bq-9ev" id="Jex-WH-joW"/>
-                            <outlet property="delegate" destination="wP7-Bq-9ev" id="BS6-E8-sT7"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="table1" id="dMG-zO-7vP"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <connections>
-                        <outlet property="SerchTableView" destination="zhC-ov-1lT" id="nnY-SI-Ybv"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="n5e-bz-BxE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="MXH-qD-vDh"/>
-            </objects>
-            <point key="canvasLocation" x="1611.5" y="233.5"/>
         </scene>
         <!--Tips Table View Controller-->
         <scene sceneID="3uM-Rg-H5E">
