--- a/iidaPro-2015/Base.lproj/Main.storyboard
+++ b/iidaPro-2015/Base.lproj/Main.storyboard
@@ -75,7 +75,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アラーム" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bto-yp-5c1">
                                 <rect key="frame" x="266" y="31" width="68" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ID-Oc-W06">
@@ -104,7 +104,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="3rR-pq-gfU" kind="presentation" id="puq-iU-PtA"/>
+                                    <action selector="NightTimerSetting:" destination="YOx-UK-WSS" eventType="touchUpInside" id="RHv-b7-IML"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gXu-JT-F4j">
@@ -113,7 +113,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="3rR-pq-gfU" kind="presentation" id="EVg-bb-Ybe"/>
+                                    <action selector="MorningTimerSetting:" destination="YOx-UK-WSS" eventType="touchUpInside" id="yMn-1H-Iu7"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="ここに説明文を書き込む" translatesAutoresizingMaskIntoConstraints="NO" id="Ll9-EK-v1P">
@@ -128,13 +128,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCy-nh-PwK">
                                 <rect key="frame" x="98" y="100" width="50" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="08:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Btd-3A-3IU">
                                 <rect key="frame" x="98" y="171" width="50" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -203,7 +203,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="お問い合わせ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7UT-1G-8VJ">
                                 <rect key="frame" x="249" y="31" width="102" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BpN-ES-9OA">
@@ -287,7 +287,7 @@
                                             </date>
                                             <locale key="locale" localeIdentifier="ja_JP"/>
                                             <connections>
-                                                <action selector="EditingDidEnd:" destination="3rR-pq-gfU" eventType="editingDidEnd" id="6Cv-Mc-mRJ"/>
+                                                <action selector="EditingDidEnd:" destination="3rR-pq-gfU" eventType="editingDidEnd" id="RhV-be-HDt"/>
                                                 <action selector="valueChanged:" destination="3rR-pq-gfU" eventType="valueChanged" id="uOg-nc-SQu"/>
                                             </connections>
                                         </datePicker>
@@ -298,7 +298,7 @@
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                             <connections>
-                                                <outletCollection property="gestureRecognizers" destination="oNh-me-i3y" appends="YES" id="0uH-Di-3bI"/>
+                                                <outletCollection property="gestureRecognizers" destination="oNh-me-i3y" appends="YES" id="wpD-Uu-CFt"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -333,21 +333,13 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CEd-rU-3FC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="oNh-me-i3y">
-                    <connections>
-                        <segue destination="YOx-UK-WSS" kind="presentation" id="DZt-6q-oNp"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer id="oNh-me-i3y"/>
             </objects>
-            <point key="canvasLocation" x="1440" y="999"/>
+            <point key="canvasLocation" x="1702" y="1015"/>
         </scene>
     </scenes>
     <resources>
         <image name="moon" width="100" height="100"/>
         <image name="sun" width="100" height="100"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="DZt-6q-oNp"/>
-        <segue reference="puq-iU-PtA"/>
-    </inferredMetricsTieBreakers>
 </document>
